[gd_scene load_steps=36 format=2]

[ext_resource path="res://src/game/entities/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/player/player_sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/sfx/movement/16_human_walk_stone_2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/sfx/movement/16_human_walk_stone_1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/sfx/jump/12_human_jump_3.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/sfx/jump/12_human_jump_2.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/sfx/jump/12_human_jump_1.wav" type="AudioStream" id=7]
[ext_resource path="res://src/game/utils/AudioHandler.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sound/sfx/jump/13_human_jump_land_1.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/sfx/jump/13_human_jump_land_2.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sound/sfx/movement/15_human_dash_1.wav" type="AudioStream" id=11]
[ext_resource path="res://src/game/entities/player/PlayerStateMachine.gd" type="Script" id=12]
[ext_resource path="res://src/game/entities/player/states/WalkState.gd" type="Script" id=13]
[ext_resource path="res://src/game/entities/player/states/IdleState.gd" type="Script" id=14]
[ext_resource path="res://src/game/entities/player/states/DeadState.gd" type="Script" id=15]
[ext_resource path="res://src/game/entities/player/states/JumpState.gd" type="Script" id=16]
[ext_resource path="res://src/game/entities/player/states/DashState.gd" type="Script" id=17]
[ext_resource path="res://src/game/entities/player/WeaponManager.gd" type="Script" id=18]
[ext_resource path="res://assets/sound/sfx/player/14_human_death_spin.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/sound/sfx/player/11_human_damage_1.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/sound/sfx/player/11_human_damage_3.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/sound/sfx/player/11_human_damage_2.wav" type="AudioStream" id=22]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponManager:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodySFX:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "dash"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 18, 19, 20 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("BodySFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.423985,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodySFX:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "die"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponManager:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35, 40 ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("BodySFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.420935,
"start_offset": 0.45,
"stream": ExtResource( 19 )
} ],
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodySFX:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -5.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "fall"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.9
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -5 ), Vector2( -4, -6 ), Vector2( -4, -5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, -7 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyPivot/WeaponPivot:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -5 ), Vector2( -4, -6 ), Vector2( -4, -7 ), Vector2( -4, -6 ), Vector2( -4, -5 ), Vector2( -4, -6 ), Vector2( -4, -7 ), Vector2( -4, -6 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("BodySFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.300623,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.259272,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodySFX:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 8.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 2, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 288, 160 )

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0, 0.574163, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 2
emission_box_extents = Vector3( 2, 0.1, 1 )
flag_disable_z = true
direction = Vector3( -0.3, -0.2, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
initial_velocity_random = 0.7
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 1.0
color = Color( 0.545098, 0.576471, 0.686275, 1 )
color_ramp = SubResource( 15 )
hue_variation = 0.01
hue_variation_random = 1.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
ACC_VAR = 1.5
ACC_VAR_DEFAULT = 1.5
H_SPEED_LIMIT = 100.0
jump_speed = 0
default_jump_speed = 200

[node name="Acceleration" type="Timer" parent="."]
wait_time = 0.12
autostart = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 12 )
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = [ NodePath("Idle"), NodePath("Walk"), NodePath("Dead"), NodePath("Jump"), NodePath("Dash") ]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
state_id = "idle"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 13 )
state_id = "walk"

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 16 )
state_id = "jump"

[node name="JumpSFX" parent="StateMachine/Jump" instance=ExtResource( 8 )]
_audio_bus = "PlayerMovements"
_audio_references = [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ]
_db_volumes = [ -5.0, -5.0, -5.0 ]
_pitch_scales = [ [ 1.5 ], [ 1.5 ], [ 1.5 ] ]

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource( 17 )
state_id = "dash"
dash_time = 0.2
speed_multiplier = 3.0
dash_cooldown_color = Color( 0.407843, 0.431373, 1, 1 )

[node name="DashCooldown" type="Timer" parent="StateMachine/Dash"]
one_shot = true

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 15 )
state_id = "dead"

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/dash = SubResource( 11 )
anims/die = SubResource( 8 )
anims/fall = SubResource( 7 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="LandSFX" parent="." instance=ExtResource( 8 )]
unique_name_in_owner = true
_audio_bus = "PlayerMovements"
_audio_references = [ ExtResource( 9 ), ExtResource( 10 ) ]
_db_volumes = [ -15.0, -15.0 ]
_pitch_scales = [ [ 2.0 ], [ 2.0 ] ]

[node name="HitSFX" parent="." instance=ExtResource( 8 )]
unique_name_in_owner = true
_audio_bus = "PlayerMovements"
_audio_references = [ ExtResource( 20 ), ExtResource( 22 ), ExtResource( 21 ) ]
_db_volumes = [ -10.0, -10.0, -10.0 ]
_pitch_scales = [ [ 0.9, 1.1 ], [ 0.9, 1.1 ], [ 0.9, 1.1 ] ]

[node name="BodySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
bus = "PlayerMovements"

[node name="CollisionShape2D1" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 12 )

[node name="FloorRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="FloorRaycasts"]
cast_to = Vector2( 0, 1 )

[node name="RayCast2D2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -3, 0 )
cast_to = Vector2( 0, 1 )

[node name="RayCast2D3" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 3, 0 )
cast_to = Vector2( 0, 1 )

[node name="BodyPivot" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="BodyPivot"]
unique_name_in_owner = true
position = Vector2( -2, -11 )
texture = SubResource( 2 )
hframes = 9
vframes = 5

[node name="JumpParticles" type="Particles2D" parent="BodyPivot"]
unique_name_in_owner = true
position = Vector2( -1, 0 )
emitting = false
amount = 16
lifetime = 0.15
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 13 )

[node name="WeaponPivot" type="Node2D" parent="BodyPivot"]
position = Vector2( -4, -5 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="BodyPivot/WeaponPivot"]
remote_path = NodePath("../../../WeaponManager")
update_rotation = false
update_scale = false

[node name="WeaponManager" type="Node2D" parent="."]
position = Vector2( -4, -5 )
script = ExtResource( 18 )

[connection signal="cinematic_mode_set" from="." to="StateMachine" method="_on_Player_cinematic_mode_set"]
[connection signal="healed" from="." to="StateMachine" method="notify_healed"]
[connection signal="hit" from="." to="StateMachine" method="notify_hit"]
[connection signal="hp_changed" from="." to="StateMachine" method="notify_hp_changed"]
[connection signal="mana_changed" from="." to="StateMachine" method="notify_mana_changed"]
[connection signal="stamina_changed" from="." to="StateMachine" method="notify_stamina_changed"]
[connection signal="timeout" from="Acceleration" to="." method="_on_Acceleration_timeout"]
